--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,40 +50,40 @@
       <div class="modal fade" id="createEmployeeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Create new Employee</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
+            <form #createForm="ngForm" (ngSubmit)="onCreateEmployee(createForm)">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Create new Employee</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
                 <div class="form-group">
                   <label for="name" class="col-form-label">name:</label>
-                  <input type="text" class="form-control" id="name">
+                  <input type="text" ngModel class="form-control" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                   <label for="email" class="col-form-label">email:</label>
-                  <input type="text" class="form-control" id="email">
+                  <input type="text" ngModel class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
                   <label for="title" class="col-form-label">title:</label>
-                  <input type="text" class="form-control" id="title">
+                  <input type="text" ngModel class="form-control" id="title" name="title" required>
                 </div>
                 <div class="form-group">
                   <label for="phone" class="col-form-label">phone:</label>
-                  <input type="text" class="form-control" id="phone">
+                  <input type="text" ngModel class="form-control" id="phone" name="phone" required>
                 </div>
                 <div class="form-group">
                   <label for="imageUrl" class="col-form-label">imageUrl:</label>
-                  <input type="text" class="form-control" id="imageUrl">
+                  <input type="text" ngModel class="form-control" id="imageUrl" name="imageUrl" required>
                 </div>
-              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Create</button>
+              <button type="button" id="createClose" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" [disabled]="createForm.form.invalid" class="btn btn-primary">Create</button>
             </div>
+          </form>
           </div>
         </div>
       </div>
