--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -124,40 +124,41 @@
       <div class="modal fade" id="updateEmployeeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Update Employee</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
+            <form #updateForm="ngForm" (ngSubmit)="onUpdateEmployee(updateForm)">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Update Employee</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
                 <div class="form-group">
                   <label for="name" class="col-form-label">name:</label>
-                  <input type="text" class="form-control" id="name" value="{{employee?.name}}">
+                  <input type="hidden" ngModel="{{employee?.id}}" class="form-control" id="id" name="id" value="{{employee?.id}}" >
+                  <input type="text" ngModel="{{employee?.name}}" class="form-control" id="name" name="name" value="{{employee?.name}}" required>
                 </div>
                 <div class="form-group">
                   <label for="email" class="col-form-label">email:</label>
-                  <input type="text" class="form-control" id="email" value="{{employee?.email}}">
+                  <input type="text" ngModel="{{employee?.email}}" class="form-control" id="email" name="email" value="{{employee?.email}}">
                 </div>
                 <div class="form-group">
                   <label for="title" class="col-form-label">title:</label>
-                  <input type="text" class="form-control" id="title" value="{{employee?.title}}">
+                  <input type="text" ngModel="{{employee?.title}}" class="form-control" id="title" name="title" value="{{employee?.title}}">
                 </div>
                 <div class="form-group">
                   <label for="phone" class="col-form-label">phone:</label>
-                  <input type="text" class="form-control" id="phone" value="{{employee?.phone}}">
+                  <input type="text" ngModel="{{employee?.phone}}" class="form-control" id="phone" name="phone" value="{{employee?.phone}}">
                 </div>
                 <div class="form-group">
                   <label for="imageUrl" class="col-form-label">imageUrl:</label>
-                  <input type="text" class="form-control" id="imageUrl" value="{{employee?.imageUrl}}">
+                  <input type="text" ngModel="{{employee?.imageUrl}}" class="form-control" id="imageUrl" name="imageUrl" value="{{employee?.imageUrl}}">
                 </div>
-              </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Update</button>
+              <button type="button" id="updateClose" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit"  class="btn btn-primary">Update</button>
             </div>
+          </form>
           </div>
         </div>
       </div>
