--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
     <div class="container" id="main-container">
         <div class="row">
-            <div *ngFor="let employee of employees" class="col-md-6 col-xl-3">
+            <div *ngFor="let employee of employees" class="col-md-6 col-xl-4">
                 <div class="card m-b-30">
                     <div class="card-body row">
                         <div class="col-6">
@@ -31,14 +31,14 @@
                         </div>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><i class="fa fa-envelope float-right"></i><a href="#">{{employee?.email}}</a></li>
-                        <li class="list-group-item"><i class="fa fa-phone float-right"></i>phone : {{employee?.phone}}</li>
+                        <li class="list-group-item"><i class="fa fa-envelope float-centered"></i><a href="#">  {{employee?.email}}</a></li>
+                        <li class="list-group-item"><i class="fa fa-phone float-centered"></i>  {{employee?.phone}}</li>
                     </ul>
                     <div class="card-body">
-                        <div class="float-right btn-group btn-group-sm">
-                            <a (click)="onOpenModal(employee)" type="button" data-toggle="modal" data-target="#readEmployeeModal"><i class="fa fa-eye"></i> </a>
-                            <a (click)="onOpenModal(employee)" type="button" data-toggle="modal" data-target="#updateEmployeeModal"><i class="fa fa-pencil"></i></a>
-                            <a (click)="onOpenModal(employee)" type="button" data-toggle="modal" data-target="#deleteEmployeeModal"><i class="fa fa-times"></i></a>
+                        <div class="float-right btn-group btn-group-sm center">
+                            <a (click)="onOpenModal(employee)" type="button" data-toggle="modal" data-target="#readEmployeeModal"><i class="fa fa-eye float-centered"></i> </a>
+                            <a (click)="onOpenModal(employee)" type="button" data-toggle="modal" data-target="#updateEmployeeModal"><i class="fa fa-pencil float-centered"></i></a>
+                            <a (click)="onOpenModal(employee)" type="button" data-toggle="modal" data-target="#deleteEmployeeModal"><i class="fa fa-times float-centered"></i></a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,6 @@
               <div class="modal-body">
                 <div class="form-group">
                   <label for="name" class="col-form-label">name:</label>
-                  <input type="hidden" ngModel="{{employee?.id}}" class="form-control" id="id" name="id" value="{{employee?.id}}" >
                   <input type="text" ngModel="{{employee?.name}}" class="form-control" id="name" name="name" value="{{employee?.name}}" required>
                 </div>
                 <div class="form-group">
@@ -155,6 +154,11 @@
                 </div>
             </div>
             <div class="modal-footer">
+              <input type="hidden" ngModel="{{employee?.id}}" class="form-control" id="id" name="id" value="{{employee?.id}}" >
+              <input type="hidden" ngModel="{{employee?.employeeCode}}" class="form-control" id="employeeCode" name="employeeCode" value="{{employee?.employeeCode}}" >
+              <input type="hidden" ngModel="{{employee?.createdAt}}" class="form-control" id="createdAt" name="createdAt" value="{{employee?.createdAt}}" >
+              <input type="hidden" ngModel="{{employee?.updatedAt}}" class="form-control" id="updatedAt" name="updatedAt" value="{{employee?.updatedAt}}" >
+
               <button type="button" id="updateClose" class="btn btn-secondary" data-dismiss="modal">Close</button>
               <button type="submit"  class="btn btn-primary">Update</button>
             </div>
