--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <input type="search" (ngModelChange)="searchEmployee(key.value)" #key="ngModel" ngModel name="key" id="searchEmployee" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
         </form>
       </div>
     </nav>
@@ -46,7 +45,7 @@
     
         </div>
     </div>
-    <div *nfIf="employees?.length==0" class="container">
+    <div *ngIf="employees?.length==0" class="container">
       <div class="alert alert-secondary" role="alert">
         A simple secondary alert—check it out!
       </div>
