--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                 <div class="card m-b-30">
                     <div class="card-body row">
                         <div class="col-3">
-                            <a href=""><img src="{{employee?.imageUrl}}" alt="https://bootdey.com/img/Content/avatar/avatar7.png" class="img-fluid rounded-circle w-60"></a>
+                            <a href=""><img src="{{employee?.imageUrl}}" alt="https://picsum.photos/200" class="img-fluid rounded-circle w-60"></a>
                         </div>
                         <div class="col-9 card-title align-self-center mb-0">
                             <h5>{{employee?.name}}</h5>
